test/classes/casts/GenericDowncast.3.good
GenericDowncast.chpl:6: In function 'main':
GenericDowncast.chpl:20: error: illegal downcast to generic superclass type 'unmanaged D'
